[package]
name = "libcorrekt"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"
libc = "0.2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["combaseapi", "objbase", "spellcheck"]

[target.'cfg(not(windows))'.dependencies]
hunspell-sys = "0.1"
